fixing overflow-x

--- a/style.css
+++ b/style.css
@@ -232,6 +232,7 @@ h3 {
     display:grid;
     grid-template-columns: 3fr 1fr;
     gap:20px;
+    overflow-x: hidden;
 }
 
 .projectsGrid {
